# marshmallow-utils

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
marshmallow_utils/: __init__.py  context.py  html.py  links.py  permissions.py  version.py
marshmallow_utils/fields/: __init__.py  babel.py  contrib.py  edtfdatestring.py  generated.py  identifier.py  isodate.py  isolanguage.py  links.py  localized_edtfdatestring.py  localizededtfstring.py  nestedattr.py  sanitizedhtml.py  sanitizedunicode.py  strippedhtml.py  trimmed.py  tzdatetime.py  url.py
marshmallow_utils/schemas/: __init__.py  geojson.py  identifier.py
marshmallow_utils/translations/: messages.pot
marshmallow_utils/translations/af/LC_MESSAGES/: messages.po
marshmallow_utils/translations/ar/LC_MESSAGES/: messages.po
marshmallow_utils/translations/bg/LC_MESSAGES/: messages.po
marshmallow_utils/translations/ca/LC_MESSAGES/: messages.po
marshmallow_utils/translations/cs/LC_MESSAGES/: messages.po
marshmallow_utils/translations/da/LC_MESSAGES/: messages.po
marshmallow_utils/translations/de/LC_MESSAGES/: messages.po
marshmallow_utils/translations/de_AT/LC_MESSAGES/: messages.po
marshmallow_utils/translations/de_DE/LC_MESSAGES/: messages.po
marshmallow_utils/translations/el/LC_MESSAGES/: messages.po
marshmallow_utils/translations/en_AT/LC_MESSAGES/: messages.po
marshmallow_utils/translations/en_HU/LC_MESSAGES/: messages.po
marshmallow_utils/translations/es/LC_MESSAGES/: messages.po
marshmallow_utils/translations/es_CU/LC_MESSAGES/: messages.po
marshmallow_utils/validators/: __init__.py  oneof.py
tests/: conftest.py  test_babel.py  test_contrib.py  test_edtfdatestring.py  test_fields.py  test_isolanguage.py  test_links.py  test_localizededtfstring.py  test_marshmallow_utils.py  test_nestedattr.py
tests/fields/: test_identifier_field.py  test_url.py
tests/schemas/: test_geojson.py  test_identifier_schema.py  test_multipoint.py  test_point.py  test_polygon.py  test_schema_permissions.py
tests/validators/: test_lazyoneof.py
(+35 files in other folders)
