# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2020-2024 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Marshmallow-Utils is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = marshmallow-utils
version = attr: marshmallow_utils.__version__
description = Extras and utilities for Marshmallow.
long_description = file: README.rst, CHANGES.rst
keywords = invenio search ui
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/marshmallow-utils
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    arrow>=0.16.0
    Babel>=2.8
    babel-edtf>=1.2.0
    bleach>=5.0.0
    edtf>=5.0.0,<6.0.0
    ftfy>=4.4.3
    geojson>=2.5.0
    idutils>=1.1.8
    marshmallow>=3.5.0,<4.0.0
    marshmallow-oneofschema>=2.1.0
    pycountry>=18.12.8
    uritemplate>=3.0.1
    werkzeug>=1.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    check-manifest>=0.42
    coverage>=5.2.1
    pytest-cov>=2.10.1
    pytest-isort>=1.2.0
    pytest-pydocstyle>=2.2.0
    pytest>=6.0
    Sphinx>=4.2.0

[options.entry_points]
invenio_i18n.translations =
    marshmallow_utils = marshmallow_utils

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = marshmallow_utils/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = marshmallow_utils/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = marshmallow_utils/translations/messages.pot
output-dir = marshmallow_utils/translations/

[update_catalog]
input-file = marshmallow_utils/translations/messages.pot
output-dir = marshmallow_utils/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=marshmallow_utils --cov-report=term-missing
testpaths = tests marshmallow_utils
filterwarnings = ignore::pytest.PytestDeprecationWarning
